--- a/src/embassy-access-worker/embassy-access-worker.fsproj
+++ b/src/embassy-access-worker/embassy-access-worker.fsproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <Compile Include="dependencies\Configuration.fs" />
     <Compile Include="dependencies\Persistence.fs" />
+    <Compile Include="dependencies\WorkerTask.fs" />
     <Compile Include="dependencies\embassies\Common.fs" />
     <Compile Include="dependencies\embassies\Russian.fs" />
     <Compile Include="dependencies\embassies\Italian.fs" />
