feat: Implement Prenotami service commands and queries for Italian services
- Added Command.fs and Query.fs for Prenotami service handling in Italian.
- Implemented request handling, appointment confirmation, and notification settings.
- Created user-friendly messages for various request states and actions.
- Introduced limits for manual and automatic requests.

feat: Add Russian service handling for Kdmid and Midpass

- Created Command.fs and Query.fs for Kdmid service with appointment management.
- Implemented request processing and user subscription management for Midpass service.
- Added message formatting and routing for user interactions.

refactor: Remove obsolete Router.fs file

- Deleted Router.fs as it was no longer needed in the current architecture.

--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -5,68 +5,68 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="domain\Constants.fs" />
     <Compile Include="domain\Subscription.fs" />
     <Compile Include="domain\Chat.fs" />
+    <Compile Include="domain\Constants.fs" />
     <Compile Include="data_access\Subscriptions.fs" />
     <Compile Include="data_access\chat\Chat.fs" />
     <Compile Include="data_access\chat\FileSystem.fs" />
     <Compile Include="data_access\chat\InMemory.fs" />
     <Compile Include="data_access\chat\Postgre.fs" />
     <Compile Include="data_access\chat\Storage.fs" />
-    <Compile Include="router\culture\Get.fs" />
-    <Compile Include="router\culture\Post.fs" />
-    <Compile Include="router\culture\Method.fs" />
-    <Compile Include="router\embassies\Get.fs" />
-    <Compile Include="router\embassies\Method.fs" />
-    <Compile Include="router\services\russian\kdmid\Get.fs" />
-    <Compile Include="router\services\russian\kdmid\Post.fs" />
-    <Compile Include="router\services\russian\kdmid\Delete.fs" />
-    <Compile Include="router\services\russian\kdmid\Method.fs" />
-    <Compile Include="router\services\russian\midpass\Get.fs" />
-    <Compile Include="router\services\russian\midpass\Post.fs" />
-    <Compile Include="router\services\russian\midpass\Delete.fs" />
-    <Compile Include="router\services\russian\midpass\Method.fs" />
-    <Compile Include="router\services\russian\Method.fs" />
-    <Compile Include="router\services\italian\prenotami\Get.fs" />
-    <Compile Include="router\services\italian\prenotami\Post.fs" />
-    <Compile Include="router\services\italian\prenotami\Delete.fs" />
-    <Compile Include="router\services\italian\prenotami\Method.fs" />
-    <Compile Include="router\services\italian\Method.fs" />
-    <Compile Include="router\services\Get.fs" />
-    <Compile Include="router\services\Method.fs" />
-    <Compile Include="router\Router.fs" />
-    <Compile Include="dependencies\Configuration.fs" />
+    <Compile Include="features\culture\router\Get.fs" />
+    <Compile Include="features\culture\router\Post.fs" />
+    <Compile Include="features\culture\router\Method.fs" />
+    <Compile Include="features\embassies\router\Get.fs" />
+    <Compile Include="features\embassies\router\Method.fs" />
+    <Compile Include="features\services\router\Get.fs" />
+    <Compile Include="features\services\router\russian\kdmid\Get.fs" />
+    <Compile Include="features\services\router\russian\kdmid\Post.fs" />
+    <Compile Include="features\services\router\russian\kdmid\Delete.fs" />
+    <Compile Include="features\services\router\russian\kdmid\Method.fs" />
+    <Compile Include="features\services\router\russian\midpass\Get.fs" />
+    <Compile Include="features\services\router\russian\midpass\Post.fs" />
+    <Compile Include="features\services\router\russian\midpass\Delete.fs" />
+    <Compile Include="features\services\router\russian\midpass\Method.fs" />
+    <Compile Include="features\services\router\russian\Method.fs" />
+    <Compile Include="features\services\router\italian\prenotami\Get.fs" />
+    <Compile Include="features\services\router\italian\prenotami\Post.fs" />
+    <Compile Include="features\services\router\italian\prenotami\Delete.fs" />
+    <Compile Include="features\services\router\italian\prenotami\Method.fs" />
+    <Compile Include="features\services\router\italian\Method.fs" />
+    <Compile Include="features\services\router\Method.fs" />
+    <Compile Include="app\Router.fs" />
+    <Compile Include="app\Configuration.fs" />
     <Compile Include="dependencies\Persistence.fs" />
     <Compile Include="dependencies\Web.fs" />
-    <Compile Include="dependencies\Culture.fs" />
+    <Compile Include="features\culture\deps\Dependencies.fs" />
     <Compile Include="dependencies\Client.fs" />
     <Compile Include="dependencies\Request.fs" />
-    <Compile Include="dependencies\Embassies.fs" />
-    <Compile Include="dependencies\services\Services.fs" />
-    <Compile Include="dependencies\services\russian\Russian.fs" />
-    <Compile Include="dependencies\services\russian\Midpass.fs" />
-    <Compile Include="dependencies\services\russian\Kdmid.fs" />
-    <Compile Include="dependencies\services\italian\Italian.fs" />
-    <Compile Include="dependencies\services\italian\Prenotami.fs" />
-    <Compile Include="services\culture\Query.fs" />
-    <Compile Include="services\culture\Command.fs" />
-    <Compile Include="services\services\russian\kdmid\Query.fs" />
-    <Compile Include="services\services\russian\kdmid\Command.fs" />
-    <Compile Include="services\services\russian\midpass\Query.fs" />
-    <Compile Include="services\services\russian\midpass\Command.fs" />
-    <Compile Include="services\services\russian\Query.fs" />
-    <Compile Include="services\services\italian\prenotami\Query.fs" />
-    <Compile Include="services\services\italian\prenotami\Command.fs" />
-    <Compile Include="services\services\italian\Query.fs" />
-    <Compile Include="services\services\Query.fs" />
-    <Compile Include="services\embassies\Query.fs" />
-    <Compile Include="controllers\Culture.fs" />
-    <Compile Include="controllers\Embassies.fs" />
-    <Compile Include="controllers\Services.fs" />
-    <Compile Include="controllers\Controller.fs" />
-    <Compile Include="Client.fs" />
-    <Compile Include="Initializer.fs" />
+    <Compile Include="features\embassies\deps\Dependencies.fs" />
+    <Compile Include="features\services\deps\Services.fs" />
+    <Compile Include="features\services\deps\russian\Russian.fs" />
+    <Compile Include="features\services\deps\russian\Midpass.fs" />
+    <Compile Include="features\services\deps\russian\Kdmid.fs" />
+    <Compile Include="features\services\deps\italian\Italian.fs" />
+    <Compile Include="features\services\deps\italian\Prenotami.fs" />
+    <Compile Include="features\culture\services\Query.fs" />
+    <Compile Include="features\culture\services\Command.fs" />
+    <Compile Include="features\services\services\russian\kdmid\Query.fs" />
+    <Compile Include="features\services\services\russian\kdmid\Command.fs" />
+    <Compile Include="features\services\services\russian\midpass\Query.fs" />
+    <Compile Include="features\services\services\russian\midpass\Command.fs" />
+    <Compile Include="features\services\services\russian\Query.fs" />
+    <Compile Include="features\services\services\italian\prenotami\Query.fs" />
+    <Compile Include="features\services\services\italian\prenotami\Command.fs" />
+    <Compile Include="features\services\services\italian\Query.fs" />
+    <Compile Include="features\services\services\Query.fs" />
+    <Compile Include="features\embassies\services\Query.fs" />
+    <Compile Include="features\culture\Controller.fs" />
+    <Compile Include="features\embassies\Controller.fs" />
+    <Compile Include="features\services\Controller.fs" />
+    <Compile Include="app\Controller.fs" />
+    <Compile Include="app\Client.fs" />
+    <Compile Include="app\Initializer.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
